Java11 jakarta (#32)
* Update pom.xml to use new jakarta libraries

* Update references to javax.xml classes to jakarta.xml classes instead

* Remove deprecated java calls from Utils

---------

Co-authored-by: Paul Kramer <pk@cantamen.de>